--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
+        "test": "vue-cli-service test:unit",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
@@ -17,18 +18,25 @@
         "vuex": "^4.0.0-0"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.0",
+        "@types/mocha": "^9.1.0",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-typescript": "~4.5.0",
+        "@vue/cli-plugin-unit-mocha": "^5.0.1",
         "@vue/cli-plugin-vuex": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
         "@vue/compiler-sfc": "^3.0.0",
         "@vue/eslint-config-typescript": "^7.0.0",
+        "@vue/test-utils": "^2.0.0-rc.17",
+        "chai": "^4.3.6",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^7.0.0",
+        "mocha": "^9.2.0",
+        "mochapack": "^2.1.4",
         "node-sass": "^4.12.0",
         "sass-loader": "^8.0.2",
         "typescript": "~4.1.5"
