--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "test": "vue-cli-service test:unit",
+        "deploy": "npm run build && firebase deploy",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
