--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@popperjs/core": "^2.11.2",
         "bootstrap": "^5.1.3",
         "core-js": "^3.6.5",
+        "firebase": "^9.6.8",
         "vue": "^3.0.0",
         "vue-class-component": "^8.0.0-0",
         "vue-router": "^4.0.0-0",
