--- a/package.json
+++ b/package.json
@@ -10,41 +10,38 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.3.0",
-        "@fortawesome/free-regular-svg-icons": "^6.0.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
-        "@fortawesome/vue-fontawesome": "^3.0.0-5",
-        "@popperjs/core": "^2.11.2",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
+        "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
-        "core-js": "^3.6.5",
         "firebase": "^9.6.8",
-        "vue": "^3.0.0",
+        "core-js": "^3.8.3",
+        "vue": "^3.2.13",
         "vue-class-component": "^8.0.0-0",
-        "vue-router": "^4.0.0-0",
-        "vuex": "^4.0.0-0"
+        "vue-router": "^4.0.3",
+        "vuex": "^4.0.0"
     },
     "devDependencies": {
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.1.0",
-        "@typescript-eslint/eslint-plugin": "^4.18.0",
-        "@typescript-eslint/parser": "^4.18.0",
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-plugin-router": "~4.5.0",
-        "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-plugin-unit-mocha": "^5.0.1",
-        "@vue/cli-plugin-vuex": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
-        "@vue/compiler-sfc": "^3.0.0",
-        "@vue/eslint-config-typescript": "^7.0.0",
-        "@vue/test-utils": "^2.0.0-rc.17",
-        "chai": "^4.3.6",
-        "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^7.0.0",
-        "mocha": "^9.2.0",
-        "mochapack": "^2.1.4",
-        "node-sass": "^4.12.0",
-        "sass-loader": "^8.0.2",
-        "typescript": "~4.1.5"
+        "@types/chai": "^4.2.15",
+        "@types/mocha": "^8.2.1",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-eslint": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-plugin-typescript": "~5.0.0",
+        "@vue/cli-plugin-unit-mocha": "~5.0.0",
+        "@vue/cli-plugin-vuex": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
+        "@vue/eslint-config-typescript": "^9.1.0",
+        "@vue/test-utils": "^2.0.0-0",
+        "chai": "^4.2.0",
+        "eslint": "^7.32.0",
+        "eslint-plugin-vue": "^8.0.3",
+        "sass": "^1.32.7",
+        "sass-loader": "^12.0.0",
+        "typescript": "~4.5.5"
     }
 }
